--- a/app/src/main/res/drawable/cardborder.xml
+++ b/app/src/main/res/drawable/cardborder.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <solid android:color="#ffffff" />
-    <stroke android:width="1dip"
-        android:color="#f1efec"/>
 
+    <stroke android:width="2dip" android:color="#FF757575"/>
+    <corners android:radius="3dp"/>
 </shape>
