--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
     <resources>
-        <color name="colorPrimary">#FFC107</color>
-        <color name="colorPrimaryDark">#FFA000</color>
+        <color name="colorPrimary">#ffc107</color>
+        <color name="colorPrimaryDark">#ffa000</color>
         <color name="primary_light">#FFECB3</color>
         <color name="colorAccent">#FFEB3B</color>
         <color name="primary_text">#212121</color>
