--- a/app/src/main/res/layout-land/fragment_comix_genertor.xml
+++ b/app/src/main/res/layout-land/fragment_comix_genertor.xml
@@ -7,23 +7,24 @@
 
     <ImageView
         android:id="@+id/image_lock"
-        android:layout_width="24dp"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="20dp"
         android:alpha=".5"
-        app:layout_constraintBottom_toTopOf="@+id/cv1"
+        app:layout_constraintBottom_toTopOf="@+id/guidelinehor1"
         app:layout_constraintEnd_toEndOf="@+id/cv1"
+        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="@+id/cv1"
-        app:srcCompat="@drawable/lock_whith_angle_lock_500" />
+        app:srcCompat="@drawable/lock_whith_angle_lock_500"
+        android:visibility="gone"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginStart="8dp"
         android:background="@drawable/cardborder"
-
         app:cardCornerRadius="5dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toTopOf="@+id/guidelinehor2"
@@ -34,16 +35,16 @@
         app:layout_constraintTop_toTopOf="@+id/guidelinehor1">
 
         <RelativeLayout
-            android:id="@+id/relative_layout1"
-
+            android:id="@+id/card_1_border_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/image_view_card_1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
                 android:visibility="visible"
                 app:srcCompat="@drawable/a001_2"
                 tools:layout_editor_absoluteX="6dp"
@@ -51,11 +52,24 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <ImageView
+        android:id="@+id/image_lock_2"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+
+        android:layout_marginBottom="20dp"
+        android:alpha=".5"
+        app:layout_constraintBottom_toTopOf="@+id/guidelinehor1"
+        app:layout_constraintEnd_toEndOf="@+id/cv2"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="@+id/cv2"
+        app:srcCompat="@drawable/lock_whith_angle_lock_500"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.CardView
         android:id="@+id/cv2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/cardborder"
@@ -68,21 +82,42 @@
         app:layout_constraintStart_toEndOf="@+id/cv1"
         app:layout_constraintTop_toTopOf="@+id/cv1">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <RelativeLayout
+            android:id="@+id/card_2_border_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            app:srcCompat="@drawable/a100"
-            tools:layout_editor_absoluteX="6dp"
-            tools:layout_editor_absoluteY="8dp" />
+            <ImageView
+                android:id="@+id/image_view_card_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
+                app:srcCompat="@drawable/a100"
+                tools:layout_editor_absoluteX="6dp"
+                tools:layout_editor_absoluteY="8dp" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
+
+    <ImageView
+        android:id="@+id/image_lock_3"
+        android:layout_width="24dp"
+        android:layout_height="0dp"
+
+        android:layout_marginBottom="20dp"
+        android:alpha=".5"
+        app:layout_constraintBottom_toTopOf="@+id/guidelinehor1"
+        app:layout_constraintEnd_toEndOf="@+id/cv3"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="@+id/cv3"
+        app:srcCompat="@drawable/lock_whith_angle_lock_500"
+        android:visibility="gone"/>
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginEnd="8dp"
         android:background="@drawable/cardborder"
         app:cardCornerRadius="5dp"
@@ -93,20 +128,31 @@
         app:layout_constraintStart_toEndOf="@+id/cv2"
         app:layout_constraintTop_toTopOf="@+id/cv2">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <RelativeLayout
+            android:id="@+id/card_3_border_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            app:srcCompat="@drawable/a100"
-            tools:layout_editor_absoluteX="6dp"
-            tools:layout_editor_absoluteY="8dp" />
+            <ImageView
+                android:id="@+id/image_view_card_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
+                app:srcCompat="@drawable/a100"
+                tools:layout_editor_absoluteX="6dp"
+                tools:layout_editor_absoluteY="8dp" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <Button
         android:id="@+id/button_generate_comix"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
 
         android:onClick="buttonClick"
         android:text="Genearate new comix"
@@ -115,7 +161,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelinehor3"
-        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintWidth_percent="0.65" />
 
     <android.support.constraint.Guideline
@@ -123,14 +168,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.19" />
+        app:layout_constraintGuide_percent="0.05" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelinehor2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.79" />
+        app:layout_constraintGuide_percent="0.8" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelinehor3"
@@ -138,6 +183,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.9" />
-
 
 </android.support.constraint.ConstraintLayout>
