--- a/app/src/main/res/layout-land/fragment_two.xml
+++ b/app/src/main/res/layout-land/fragment_two.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="20dp"
         android:clickable="true"
         android:elevation="100dp"
         app:backgroundTint="@color/colorPrimary"
@@ -28,7 +28,7 @@
         android:layout_height="match_parent"
 
         app:bounds="true"
-        app:boundsSize="20dp"
+        app:boundsSize="0dp"
         app:gravityX="0"
         app:gravityY="9.8"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -36,7 +36,8 @@
 
         app:physics="true"
         app:positionIterations="7"
-        app:velocityIterations="4">
+        app:velocityIterations="4"
+        tools:layout_editor_absoluteX="0dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cv1"
@@ -75,7 +76,7 @@
             android:layout_width="131dp"
             android:layout_height="192dp"
             android:layout_gravity="top"
-            android:layout_marginStart="80dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/cardborder"
 
@@ -105,7 +106,7 @@
             android:layout_width="131dp"
             android:layout_height="192dp"
             android:layout_gravity="top"
-            android:layout_marginStart="100dp"
+            android:layout_marginStart="170dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/cardborder"
 
@@ -133,9 +134,9 @@
             android:id="@+id/cv4"
             android:layout_width="131dp"
             android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="120dp"
+
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
@@ -163,9 +164,9 @@
             android:id="@+id/cv5"
             android:layout_width="131dp"
             android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="120dp"
+
+            android:layout_marginStart="190dp"
+            android:layout_marginTop="60dp"
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
@@ -191,9 +192,9 @@
             android:id="@+id/cv6"
             android:layout_width="131dp"
             android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="120dp"
+
+            android:layout_marginStart="300dp"
+            android:layout_marginTop="70dp"
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
@@ -218,12 +219,14 @@
 
 
         <View
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="2dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="0dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="45dp"
             android:background="@color/colorPrimary"
             app:layout_bodyType="statik" />
+
+
 
         <View
             android:layout_width="match_parent"
@@ -254,8 +257,6 @@
             android:layout_marginEnd="-1000dp"
             android:background="@color/colorPrimary"
             app:layout_bodyType="statik" />
-
-
 
 
     </com.jawnnypoo.physicslayout.PhysicsFrameLayout>
