--- a/app/src/main/res/layout/fragment_comix_genertor.xml
+++ b/app/src/main/res/layout/fragment_comix_genertor.xml
@@ -1,36 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
-
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
-
     <ImageView
         android:id="@+id/image_lock"
-        android:layout_width="24dp"
+        android:layout_width="wrap_content"
         android:layout_height="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:alpha=".5"
-        app:layout_constraintBottom_toTopOf="@+id/cv1"
-        app:layout_constraintEnd_toEndOf="@+id/cv1"
+        app:layout_constraintEnd_toStartOf="@+id/cv2"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/cv1"
+        app:layout_constraintTop_toTopOf="@+id/guidelinehor1"
         app:srcCompat="@drawable/lock_whith_angle_lock_500" />
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv1"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginStart="8dp"
         android:background="@drawable/cardborder"
-
         app:cardCornerRadius="5dp"
         app:cardElevation="4dp"
         app:layout_constraintBottom_toTopOf="@+id/guidelinehor2"
@@ -41,16 +34,16 @@
         app:layout_constraintTop_toTopOf="@+id/guidelinehor1">
 
         <RelativeLayout
-            android:id="@+id/relative_layout1"
-
+            android:id="@+id/card_1_border_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/imageView1"
+                android:id="@+id/image_view_card_1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
                 android:visibility="visible"
                 app:srcCompat="@drawable/a001_2"
                 tools:layout_editor_absoluteX="6dp"
@@ -58,11 +51,22 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <ImageView
+        android:id="@+id/image_lock_2"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+
+        android:layout_marginTop="8dp"
+        android:alpha=".5"
+        app:layout_constraintEnd_toEndOf="@+id/cv2"
+        app:layout_constraintStart_toStartOf="@+id/cv2"
+        app:layout_constraintTop_toTopOf="@+id/guidelinehor1"
+        app:srcCompat="@drawable/lock_whith_angle_lock_500" />
+
     <android.support.v7.widget.CardView
         android:id="@+id/cv2"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/cardborder"
@@ -75,21 +79,41 @@
         app:layout_constraintStart_toEndOf="@+id/cv1"
         app:layout_constraintTop_toTopOf="@+id/cv1">
 
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <RelativeLayout
+            android:id="@+id/card_2_border_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            app:srcCompat="@drawable/a100"
-            tools:layout_editor_absoluteX="6dp"
-            tools:layout_editor_absoluteY="8dp" />
+            <ImageView
+                android:id="@+id/image_view_card_2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
+                app:srcCompat="@drawable/a100"
+                tools:layout_editor_absoluteX="6dp"
+                tools:layout_editor_absoluteY="8dp" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
+
+    <ImageView
+        android:id="@+id/image_lock_3"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+
+        android:layout_marginTop="8dp"
+        android:alpha=".5"
+        app:layout_constraintEnd_toEndOf="@+id/cv3"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="@+id/cv3"
+        app:layout_constraintTop_toTopOf="@+id/guidelinehor1"
+        app:srcCompat="@drawable/lock_whith_angle_lock_500" />
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv3"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
         android:layout_marginEnd="8dp"
         android:background="@drawable/cardborder"
         app:cardCornerRadius="5dp"
@@ -100,22 +124,30 @@
         app:layout_constraintStart_toEndOf="@+id/cv2"
         app:layout_constraintTop_toTopOf="@+id/cv2">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <RelativeLayout
+            android:id="@+id/card_3_border_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-            app:srcCompat="@drawable/a100"
-            tools:layout_editor_absoluteX="6dp"
-            tools:layout_editor_absoluteY="8dp" />
+            <ImageView
+                android:id="@+id/image_view_card_3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="0dp"
+                app:srcCompat="@drawable/a100"
+                tools:layout_editor_absoluteX="6dp"
+                tools:layout_editor_absoluteY="8dp" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
     <Button
         android:id="@+id/button_generate_comix"
-        android:layout_width="0dp"
+        android:layout_width="267dp"
         android:layout_height="wrap_content"
-
         android:onClick="buttonClick"
+
         android:text="Genearate new comix"
         android:theme="@style/MyButton"
         app:layout_constraintBottom_toTopOf="@+id/guidelinehor3"
@@ -144,7 +176,5 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.78" />
-
-
 
 </android.support.constraint.ConstraintLayout>
