--- a/app/src/main/res/layout-land/item_card.xml
+++ b/app/src/main/res/layout-land/item_card.xml
@@ -34,10 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/cardborder">
+           >
 
             <ImageView
-                android:id="@+id/card3_image_view"
+                android:id="@+id/item_card_image_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -65,3 +65,4 @@
 
 
 </android.support.constraint.ConstraintLayout>
+    <!--android:background="@drawable/cardborder"-->
