--- a/app/src/main/res/drawable/grey_radial.xml
+++ b/app/src/main/res/drawable/grey_radial.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
 
-</selector>
+    <gradient
+        android:centerColor="#FFFFFF"
+        android:endColor="#4f4f4f"
+        android:gradientRadius="500dp"
+        android:startColor="#FFFFFF"
+        android:type="radial" >
+    </gradient>
+
+</shape>
