--- a/app/src/main/res/layout/fragment_comix_genertor.xml
+++ b/app/src/main/res/layout/fragment_comix_genertor.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
+
 
     <ImageView
         android:id="@+id/image_lock"
@@ -142,19 +147,24 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+
+
     <Button
         android:id="@+id/button_generate_comix"
-        android:layout_width="267dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:onClick="buttonClick"
-
+        android:elevation="-10dp"
         android:text="Genearate new comix"
-        android:theme="@style/MyButton"
+
+    android:theme="@style/MyButton"
+        android:background="@drawable/btn_rounded"
         app:layout_constraintBottom_toTopOf="@+id/guidelinehor3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelinehor3"
         app:layout_constraintWidth_percent="0.65" />
+
+
 
     <android.support.constraint.Guideline
         android:id="@+id/guidelinehor1"
@@ -178,3 +188,4 @@
         app:layout_constraintGuide_percent="0.78" />
 
 </android.support.constraint.ConstraintLayout>
+    <!--android:theme="@style/MyButton"-->
