--- a/app/src/main/res/layout/fragment_gravity.xml
+++ b/app/src/main/res/layout/fragment_gravity.xml
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/card3_image_view"
+                    android:id="@+id/item_card_image_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="visible"
