--- a/app/src/main/res/layout-land/fragment_comix_genertor.xml
+++ b/app/src/main/res/layout-land/fragment_comix_genertor.xml
@@ -34,10 +34,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelinehor1">
 
-        <RelativeLayout
-            android:id="@+id/card_1_border_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+
 
             <ImageView
                 android:id="@+id/image_view_card_1"
@@ -49,6 +46,10 @@
                 app:srcCompat="@drawable/a001_2"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
+        <RelativeLayout
+        android:id="@+id/card_1_border_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
@@ -82,10 +83,6 @@
         app:layout_constraintStart_toEndOf="@+id/cv1"
         app:layout_constraintTop_toTopOf="@+id/cv1">
 
-        <RelativeLayout
-            android:id="@+id/card_2_border_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/image_view_card_2"
@@ -96,6 +93,10 @@
                 app:srcCompat="@drawable/a100"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
+        <RelativeLayout
+            android:id="@+id/card_2_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
@@ -128,10 +129,6 @@
         app:layout_constraintStart_toEndOf="@+id/cv2"
         app:layout_constraintTop_toTopOf="@+id/cv2">
 
-        <RelativeLayout
-            android:id="@+id/card_3_border_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/image_view_card_3"
@@ -144,6 +141,10 @@
                 app:srcCompat="@drawable/a100"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
+        <RelativeLayout
+            android:id="@+id/card_3_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
