--- a/app/src/main/res/layout/fragment_gravity.xml
+++ b/app/src/main/res/layout/fragment_gravity.xml
@@ -35,7 +35,7 @@
 
 
         app:physics="true"
-        >
+        tools:layout_editor_absoluteX="40dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cv1"
@@ -49,7 +49,7 @@
 
             android:background="@drawable/cardborder"
             app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardElevation="1dp"
 
             app:layout_constraintDimensionRatio="604:875"
 
@@ -79,7 +79,7 @@
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
-            app:cardElevation="6dp"
+            app:cardElevation="2dp"
             app:layout_constraintDimensionRatio="604:875"
             app:layout_fixedRotation="true"
 
@@ -99,34 +99,6 @@
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv3"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-            android:layout_gravity="top"
-            android:layout_marginStart="100dp"
-            android:layout_marginTop="40dp"
-            android:background="@drawable/cardborder"
-
-            app:cardCornerRadius="5dp"
-            app:cardElevation="7dp"
-            app:layout_constraintDimensionRatio="604:875"
-
-            app:layout_fixedRotation="true">
-
-            <RelativeLayout
-                android:id="@+id/relative_layout3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/item_card_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_3" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
             android:id="@+id/cv4"
@@ -138,7 +110,7 @@
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
-            app:cardElevation="8dp"
+            app:cardElevation="3dp"
             app:layout_constraintDimensionRatio="604:875"
             app:layout_fixedRotation="true"
 
@@ -168,7 +140,7 @@
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
-            app:cardElevation="9dp"
+            app:cardElevation="4dp"
             app:layout_constraintDimensionRatio="604:875"
             app:layout_fixedRotation="true">
 
@@ -196,7 +168,7 @@
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
-            app:cardElevation="10dp"
+            app:cardElevation="5dp"
             app:layout_constraintDimensionRatio="604:875"
 
             app:layout_fixedRotation="true">
@@ -216,34 +188,7 @@
         </android.support.v7.widget.CardView>
 
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv7"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="120dp"
-            android:background="@drawable/cardborder"
 
-            app:cardCornerRadius="5dp"
-            app:cardElevation="11dp"
-            app:layout_constraintDimensionRatio="604:875"
-
-            app:layout_fixedRotation="true">
-
-            <RelativeLayout
-                android:id="@+id/relative_layout7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/card7_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_6" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
 
 
         <View
@@ -252,8 +197,8 @@
             android:layout_gravity="center"
             android:layout_marginTop="0dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="statik"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="statik" />
 
         <View
             android:layout_width="match_parent"
@@ -261,16 +206,17 @@
             android:layout_gravity="bottom"
             android:layout_marginBottom="-1050dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="kinematic"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="kinematic" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1000dp"
             android:layout_gravity="top"
             android:layout_marginTop="-1050dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="kinematic"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="kinematic" />
 
         <View
             android:layout_width="1000dp"
@@ -278,16 +224,17 @@
             android:layout_gravity="left"
             android:layout_marginStart="-1001dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="kinematic"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="kinematic" />
+
         <View
             android:layout_width="1000dp"
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_marginEnd="-1001dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="kinematic"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="kinematic" />
 
     </com.jawnnypoo.physicslayout.PhysicsFrameLayout>
 
