--- a/app/src/main/res/drawable/cardborderlock.xml
+++ b/app/src/main/res/drawable/cardborderlock.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke android:width="1dip"
-        android:color="#FFFFA000"/>
+        android:color="@color/colorPrimaryDark"/>
     <corners android:radius="3dp"/>
 </shape>
