--- a/app/src/main/res/layout-land/fragment_comix_genertor.xml
+++ b/app/src/main/res/layout-land/fragment_comix_genertor.xml
@@ -148,15 +148,16 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-    <Button
-        android:id="@+id/button_generate_comix"
+    <ImageButton
+        android:id="@+id/button_generate_commix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-
-
-        android:text="Genearate new comix"
+        android:elevation="3dp"
+        android:padding="6dp"
+        app:srcCompat="@drawable/round_arrows_bouce_white_big"
+        android:textColor="@color/secondary_text2"
         android:theme="@style/MyButton"
         android:background="@drawable/btn_rounded"
         app:layout_constraintBottom_toTopOf="@+id/guidelinehor3"
