--- a/app/src/main/res/layout-land/item_card.xml
+++ b/app/src/main/res/layout-land/item_card.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/cardborder"
         app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="604:875"
 
@@ -28,13 +28,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-            android:id="@+id/card_1_border_layout"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-           >
 
             <ImageView
                 android:id="@+id/item_card_image_view"
@@ -45,6 +39,14 @@
                 app:srcCompat="@drawable/a001_2"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
+
+        <RelativeLayout
+        android:id="@+id/card_1_border_layout"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        >
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
