--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,29 +6,11 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
     >
 
-
-<android.support.v7.widget.CardView
-
-
-    android:id="@+id/cv"
-    android:layout_width="182dp"
-    android:layout_height="222dp"
-
-
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="8dp"
-    android:background="@drawable/cardborder2"
-
-
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent">
-
-
-</android.support.v7.widget.CardView>
-
-
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/round_arrows_bouce_white"
+        tools:layout_editor_absoluteX="88dp"
+        tools:layout_editor_absoluteY="215dp" />
 </android.support.constraint.ConstraintLayout>
