--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -19,7 +19,7 @@
         android:layout_marginBottom="4dp"
         android:background="@drawable/cardborder"
         app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        app:cardElevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="604:875"
 
@@ -27,13 +27,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
-            android:id="@+id/card_1_border_layout"
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-          >
 
             <ImageView
                 android:id="@+id/item_card_image_view"
@@ -43,6 +37,14 @@
                 android:visibility="visible"
                 app:srcCompat="@drawable/a001_2"
                 android:contentDescription="TODO" />
+
+        <RelativeLayout
+        android:id="@+id/card_1_border_layout"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        >
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
@@ -64,4 +66,3 @@
 
 </android.support.constraint.ConstraintLayout>
 
-    <!--android:background="@drawable/cardborder"-->
