--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
         <color name="colorAccent">#FFEB3B</color>
         <color name="primary_text">#212121</color>
         <color name="secondary_text">#757575</color>
+        <color name="secondary_text2">#23161613</color>
         <color name="icons">#212121</color>
         <color name="divider">#BDBDBD</color>
 
