--- a/app/src/main/res/layout-land/fragment_comix_genertor.xml
+++ b/app/src/main/res/layout-land/fragment_comix_genertor.xml
@@ -5,19 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/image_lock"
+    <RelativeLayout
+        android:id="@+id/relative_layout_image_lock_1"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="20dp"
-        android:alpha=".5"
-        app:layout_constraintBottom_toTopOf="@+id/guidelinehor1"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="@+id/cv1"
-        app:layout_constraintHorizontal_bias="0.509"
         app:layout_constraintStart_toStartOf="@+id/cv1"
-        app:srcCompat="@drawable/lock_whith_angle_lock_500"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="@+id/guidelinehor_lock"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/image_lock_1"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:alpha=".5"
+            app:srcCompat="@drawable/lock_whith_angle_lock_500" />
+    </RelativeLayout>
+
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv1"
@@ -34,16 +40,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guidelinehor1">
 
-
-
             <ImageView
                 android:id="@+id/image_view_card_1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
-                android:layout_marginTop="0dp"
                 android:visibility="visible"
-                app:srcCompat="@drawable/a001_2"
+                app:srcCompat="@drawable/ic_card_1"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
         <RelativeLayout
@@ -53,19 +56,24 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-    <ImageView
-        android:id="@+id/image_lock_2"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-
-        android:layout_marginBottom="20dp"
-        android:alpha=".5"
-        app:layout_constraintBottom_toTopOf="@+id/guidelinehor1"
+    <RelativeLayout
+        android:id="@+id/relative_layout_image_lock_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="@+id/cv2"
-        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="@+id/cv2"
-        app:srcCompat="@drawable/lock_whith_angle_lock_500"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="@+id/guidelinehor_lock"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/image_lock_2"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:alpha=".5"
+            app:srcCompat="@drawable/lock_whith_angle_lock_500" />
+    </RelativeLayout>
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv2"
@@ -90,7 +98,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="0dp"
-                app:srcCompat="@drawable/a100"
+                app:srcCompat="@drawable/ic_card_2"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
         <RelativeLayout
@@ -100,19 +108,24 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
-    <ImageView
-        android:id="@+id/image_lock_3"
-        android:layout_width="24dp"
-        android:layout_height="0dp"
-
-        android:layout_marginBottom="20dp"
-        android:alpha=".5"
-        app:layout_constraintBottom_toTopOf="@+id/guidelinehor1"
+    <RelativeLayout
+        android:id="@+id/relative_layout_image_lock_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp"
         app:layout_constraintEnd_toEndOf="@+id/cv3"
-        app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="@+id/cv3"
-        app:srcCompat="@drawable/lock_whith_angle_lock_500"
-        android:visibility="gone"/>
+        app:layout_constraintTop_toTopOf="@+id/guidelinehor_lock"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/image_lock_3"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:alpha=".5"
+            app:srcCompat="@drawable/lock_whith_angle_lock_500" />
+    </RelativeLayout>
 
 
     <android.support.v7.widget.CardView
@@ -138,7 +151,7 @@
 
                 android:layout_alignParentTop="true"
                 android:layout_marginTop="0dp"
-                app:srcCompat="@drawable/a100"
+                app:srcCompat="@drawable/ic_card_3"
                 tools:layout_editor_absoluteX="6dp"
                 tools:layout_editor_absoluteY="8dp" />
         <RelativeLayout
