--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
+
     tools:context=".MainActivity">
 
     <FrameLayout
@@ -21,10 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="46dp"
         android:background="?android:attr/windowBackground"
+        android:elevation="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-
         app:menu="@menu/navigation"
-
         />
 
 </android.support.constraint.ConstraintLayout>
